# imagecpp

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  img_viz
img_viz_autogen/UVLADIE3JM/: moc_mainwindow.cpp
res/: res.qrc
src/: histogram_model.cpp  histogram_model.hpp  histogram_view.cpp  histogram_view.hpp  imagedisplay.cpp  imagedisplay.hpp  imageviewarea.cpp  imageviewarea.hpp  imageviewer.cpp  imageviewer.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
src/image/: document.cpp  document.hpp  histogram.cpp  histogram.hpp  histogramchannel.cpp  histogramchannel.hpp  histogramview.cpp  histogramview.hpp  image.cpp  image.hpp  imagedata.cpp  imagedata.hpp  imagedisplayarea.cpp  imagedisplayarea.hpp  imagesubwindow.hpp  proimage.cpp  proimage.hpp
src/manager/: documentsmanager.cpp  documentsmanager.hpp  imagemanager.cpp  imagemanager.hpp  operationsmanager.hpp
src/menus/: editmenu.cpp  editmenu.hpp  filemenu.cpp  filemenu.hpp  imagemenu.cpp  imagemenu.hpp
src/operations/: brightnesscontrast.cpp  brightnesscontrast.hpp  color.cpp  color.hpp  gammacorrection.cpp  gammacorrection.hpp  grayscale.cpp  grayscale.hpp  imageoperation.cpp  imageoperation.hpp  imageoperationdialog.cpp  imageoperationdialog.hpp  inverse.cpp  inverse.hpp  lineartransform.cpp  lineartransform.hpp  tograyscale.cpp  tograyscale.hpp
src/operations/bac/: bac.cpp  bac.hpp  bacdialog.cpp  bacdialog.hpp
src/operations/change/: imagechange.cpp  imagechange.hpp  imagechangedialog.cpp  imagechangedialog.hpp
src/operations/difference/: imagedifference.cpp  imagedifference.hpp  imagedifferencedialog.cpp  imagedifferencedialog.hpp
src/operations/digitalization/: digitalization.cpp  digitalization.hpp  digitalizationdialog.cpp  digitalizationdialog.hpp
src/operations/equalization/: equalization.cpp  equalization.hpp
src/operations/filter/: filter.cpp  filter.hpp  filterdialog.cpp  filterdialog.hpp
src/operations/gammac/: gammac.cpp  gammac.hpp  gammacdialog.cpp  gammacdialog.hpp
src/operations/grayscale/: grayscale.cpp  grayscale.hpp  grayscaledialog.cpp  grayscaledialog.hpp
src/operations/inverse/: inverse.cpp  inverse.hpp
src/operations/mirror/: mirror.cpp  mirror.hpp  transpose.cpp  transpose.hpp
src/operations/private/: filteroperation.cpp  filteroperation.hpp  imageoperation.cpp  imageoperation.hpp  imageoperationdialog.hpp  lutoperation.cpp  lutoperation.hpp  operationconfigdialog.hpp  pixeloperation.cpp  pixeloperation.hpp  pointoperation.cpp  pointoperation.hpp  secondimageoperator.cpp  secondimageoperator.hpp
src/operations/rotation/: rotation.cpp  rotation.hpp  rotationdialog.cpp  rotationdialog.hpp
src/operations/scale/: scale.cpp  scale.hpp  scaledialog.cpp  scaledialog.hpp
src/operations/specification/: specification.cpp  specification.hpp  specificationdialog.cpp  specificationdialog.hpp
src/operations/transform/: lineartransform.cpp  lineartransform.hpp  lineartransformdialog.cpp  lineartransformdialog.hpp
src/statusbar/: pixelinformationwidget.cpp
src/tools/: rectselectiontool.cpp  rectselectiontool.hpp
src/widgets/dock/: resizabledockwidget.cpp  resizabledockwidget.hpp
src/widgets/image/: imagedisplayarea.cpp  imagedisplayarea.hpp  imageslistwidget.cpp  imageslistwidget.hpp  imagesubwindow.cpp  imagesubwindow.hpp  subwindowsarea.cpp  subwindowsarea.hpp
src/widgets/menus/: editmenu.cpp  editmenu.hpp  filemenu.cpp  filemenu.hpp  imagemenu.cpp  imagemenu.hpp  mainmenubar.cpp  mainmenubar.hpp  settingsmenu.cpp  settingsmenu.hpp  windowsmenu.cpp  windowsmenu.hpp
src/widgets/statusbar/: mainstatusbar.cpp  mainstatusbar.hpp  pixelinformationwidget.cpp  pixelinformationwidget.hpp
src/widgets/utils/: sliderwithvalues.cpp  sliderwithvalues.hpp
